# lasfera

./: .env.example  CODEOWNERS  DEVNOTES.rst  Procfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-publish.yml  cicd.yml
config/: settings.py
manuscript/: admin.py  models.py  serializers.py  views.py
manuscript/migrations/: 0117_locationalias_show_on_page.py
templates/gazetteer/: gazetteer_index.html  gazetteer_single.html
templates/partials/: navigation.html
