[tool.poetry]
name = "lasfera-app"
version = "0.1.0"
description = ""
authors = ["Jason Heppler <jheppler@gmu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
django-allauth = "^65.9.0"
django-environ = "^0.12.0"
pylint-django = "^2.5.5"
pillow = "^11.3.0"
psycopg2 = "^2.9.9"
django-admin-interface = "^0.30.1"
pandas = "^2.3.0"
numpy = "^2.3.1"
openpyxl = "^3.1.2"
django-prose = "^2.0.0"
geopy = "^2.4.1"
django-nested-admin = "^4.0.2"
django-dbml = "^0.10.1"
beautifulsoup4 = "^4.13.4"
django-prose-editor = "^0.13.1"
django-tinymce = "^4.0.0"
django-import-export = "^4.3.8"
django-tailwind = "^4.0.1"
djangorestframework = "^3.16.0"
fontawesomefree = "^6.6.0"
wagtail = "^7.0.1"
django-ckeditor = "^6.7.3"


[tool.poetry.group.development.dependencies]
django-tailwind = {extras = ["reload"], version = "^4.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
