[tool.poetry]
name = "lasfera-app"
version = "0.1.0"
description = ""
authors = ["Jason Heppler <jheppler@gmu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.7"
django-allauth = "^65.13.0"
django-environ = "^0.12.0"
pylint-django = "^2.5.5"
pillow = "^11.3.0"
psycopg2 = "^2.9.11"
django-admin-interface = "^0.30.1"
pandas = "^2.3.3"
numpy = "^2.3.4"
openpyxl = "^3.1.2"
django-prose = "^2.0.0"
geopy = "^2.4.1"
django-nested-admin = "^4.1.6"
django-dbml = "^0.10.1"
beautifulsoup4 = "^4.14.2"
django-prose-editor = "^0.19.0"
django-tinymce = "^5.0.0"
django-import-export = "^4.3.13"
django-tailwind = "^4.3.1"
djangorestframework = "^3.16.1"
fontawesomefree = "^6.6.0"
wagtail = "^7.1.2"
django-ckeditor = "^6.7.3"


[tool.poetry.group.development.dependencies]
django-tailwind = {extras = ["reload"], version = "^4.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
